# php-toolkit

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  blueprint-dev.json.dist  blueprint-next-gen-importer.json  bootstrap.php  chunked_encoding_server.js  composer-ci-matrix-tests.json  composer.json  docker-compose.yml  generate-css-tests.mjs  http_api.php  http_proxy.php  monorepo-builder.php  package-lock.json  package.json  phar-box.json  phar-libraries.json  phpcs.xml  phpunit.xml  rector.php  temp_output.txt  theme-json-as-css-functions.php  theme-json-as-css.php  wp-cron.php
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  native-apis-playground-extension.yml  native-apis-wasm.yml  native-apis.yml  phpcs.yml  phpunit-tests-run.yml  phpunit-tests.yml  publish.yml  release-composer-packages.yml  release.yml  (+3 more)
.monorepo-builder/: CustomPushNextDevReleaseWorker.php
docs/: README.md  index.html  native-apis.html  native-php-extension.html  native-rust-apis.md
extensions/native-apis/: Cargo.toml  README.md  build-extension.sh  build-playground-extension.sh  build-wasm-extension.sh  config.m4  native_apis_shim.c
extensions/native-apis/playground/: blueprint.json  smoke.html
extensions/native-apis/src/: html.rs  lib.rs  url_text.rs  xml.rs
extensions/native-apis/tests/: verify-native-apis.php  verify-playground-wasm.php
extensions/native-apis/wasm-extension/: config.m4  wp_native_apis_wasm.c
wp_native_apis-wasm-extension/: index.html  releases.json
(+1434 files in other folders)
